{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 15,
  "lineage": "96ed67b7-a742-aa7c-7f29-fd518cdd677d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "INFRANAME-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0178e8ebd5d767634",
            "domain": "vpc",
            "id": "eipalloc-0178e8ebd5d767634",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-235-23-40.compute-1.amazonaws.com",
            "public_ip": "34.235.23.40",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INFRANAME-INSTANCE-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-03abbc8a6bd02ac3b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03abbc8a6bd02ac3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a088e7f426997893",
            "private_dns": "ip-10-0-2-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019939f4100b7f233",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07657af4136d18db4",
            "tags": {
              "Name": "INFRANAME-INSTANCE-PRIVATE"
            },
            "tags_all": {
              "Name": "INFRANAME-INSTANCE-PRIVATE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0102243851892e4bd"
            ]
          },
          "dependencies": [
            "aws_security_group.INFRANAME-SG-PRIVATE",
            "aws_security_group.INFRANAME-SG-PUBLIC",
            "aws_subnet.INFRANAME-SUBNET-PRIVATE",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "INFRANAME-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-0545bd616e02eccdd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0545bd616e02eccdd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c1d28f16ec6d536",
            "private_dns": "ip-10-0-1-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "public_ip": "44.204.87.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-045a7bd3920e21bf3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026710f94080bcc04",
            "tags": {
              "Name": "INFRANAME-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "INFRANAME-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7b735c377859adb"
            ]
          },
          "dependencies": [
            "aws_instance.INFRANAME-INSTANCE-PRIVATE",
            "aws_security_group.INFRANAME-SG-PRIVATE",
            "aws_security_group.INFRANAME-SG-PUBLIC",
            "aws_subnet.INFRANAME-SUBNET-PRIVATE",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "INFRANAME-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:internet-gateway/igw-0234060e565f689d7",
            "id": "igw-0234060e565f689d7",
            "owner_id": "055574845309",
            "tags": {
              "Name": "INFRANAME-IGW"
            },
            "tags_all": {
              "Name": "INFRANAME-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "INFRANAME-NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0178e8ebd5d767634",
            "association_id": "eipassoc-0dac0c69c17d24e92",
            "connectivity_type": "public",
            "id": "nat-0529af1cd686abf4f",
            "network_interface_id": "eni-0740041c962046a78",
            "private_ip": "10.0.1.88",
            "public_ip": "34.235.23.40",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-026710f94080bcc04",
            "tags": {
              "Name": "INFRANAME-NATGW"
            },
            "tags_all": {
              "Name": "INFRANAME-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.INFRANAME-EIP",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "INFRANAME-RTB-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:route-table/rtb-083555f16a2f5a548",
            "id": "rtb-083555f16a2f5a548",
            "owner_id": "055574845309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0529af1cd686abf4f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INFRANAME.RTB-PRIVATE"
            },
            "tags_all": {
              "Name": "INFRANAME.RTB-PRIVATE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b99ba273d1bfa409"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.INFRANAME-EIP",
            "aws_nat_gateway.INFRANAME-NATGW",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "INFRANAME-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:route-table/rtb-012dd9f5b963a05a7",
            "id": "rtb-012dd9f5b963a05a7",
            "owner_id": "055574845309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0234060e565f689d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "INFRANAME-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "INFRANAME-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b99ba273d1bfa409"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.INFRANAME-IGW",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INFRANAME-RTB-PRIVATE-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee0dd52ddb73d76c",
            "route_table_id": "rtb-083555f16a2f5a548",
            "subnet_id": "subnet-07657af4136d18db4"
          },
          "dependencies": [
            "aws_eip.INFRANAME-EIP",
            "aws_nat_gateway.INFRANAME-NATGW",
            "aws_route_table.INFRANAME-RTB-PRIVATE",
            "aws_subnet.INFRANAME-SUBNET-PRIVATE",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "INFRANAME-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005a7ade624a7dce8",
            "route_table_id": "rtb-012dd9f5b963a05a7",
            "subnet_id": "subnet-026710f94080bcc04"
          },
          "dependencies": [
            "aws_internet_gateway.INFRANAME-IGW",
            "aws_route_table.INFRANAME-RTB-PUBLIC",
            "aws_subnet.INFRANAME-SUBNET-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INFRANAME-SG-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0102243851892e4bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0102243851892e4bd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7b735c377859adb"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922085217607200000003",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INFRANAME-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "INFRANAME-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b99ba273d1bfa409"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.INFRANAME-SG-PUBLIC",
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "INFRANAME-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0c7b735c377859adb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7b735c377859adb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922085213384300000001",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INFRANAME-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "INFRANAME-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b99ba273d1bfa409"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INFRANAME-SUBNET-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-07657af4136d18db4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07657af4136d18db4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRANAME-SUBNET-PRIVATE"
            },
            "tags_all": {
              "Name": "INFRANAME-SUBNET-PRIVATE"
            },
            "vpc_id": "vpc-0b99ba273d1bfa409"
          },
          "dependencies": [
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "INFRANAME-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-026710f94080bcc04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026710f94080bcc04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "INFRANAME-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "INFRANAME-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-0b99ba273d1bfa409"
          },
          "dependencies": [
            "aws_vpc.INFRANAME-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "INFRANAME-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:vpc/vpc-0b99ba273d1bfa409",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05050d5b21148951b",
            "default_route_table_id": "rtb-05e456882ed4ed7f1",
            "default_security_group_id": "sg-0208e8694ead4d86e",
            "dhcp_options_id": "dopt-062c172c5a4285b27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b99ba273d1bfa409",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e456882ed4ed7f1",
            "owner_id": "055574845309",
            "tags": {
              "Name": "INFRANAME-VPC"
            },
            "tags_all": {
              "Name": "INFRANAME-VPC"
            }
          }
        }
      ]
    }
  ]
}